--- a/app/views/produtos/index.html.erb
+++ b/app/views/produtos/index.html.erb
@@ -1,3 +1,12 @@
+<% if flash[:notice] %>
+    <div class="alert alert-success alert-dismissible">
+        <%= flash[:notice] %>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+    </button>
+    </div>
+<% end %>
+
 <table class="table table-bordered table-hover">
     <thead>
         <tr>
