--- a/app/views/produtos/new.html.erb
+++ b/app/views/produtos/new.html.erb
@@ -1,4 +1,13 @@
-<%= form_for Produto.new do |form| %>
+<% @produto.errors.full_messages.each do |msg| %>
+    <div class="alert alert-danger alert-dismissible">
+        <%= msg %>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+    </button>
+    </div>
+<% end %>
+
+<%= form_for @produto do |form| %>
     <div class="row">
         <div class="col-sm-8">
             <div class="form-group">
