--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
   <%= nav_bar brand:"ManeiroStore", brand_link: root_url do%>
     <%= menu_group do %>
       <%= menu_item "Criar novo produto", new_produto_path %>
+      <%= menu_item "Departamentos", departamentos_path %>
     <% end %>
     <%= form_tag busca_produto_path, method: :get, class:"navbar-form navbar-right" do %>
       <div class="form-group">
