--- a/app/views/produtos/index.html.erb
+++ b/app/views/produtos/index.html.erb
@@ -12,9 +12,10 @@
         <tr>
             <td>Nome</td>
             <td>Descrição</td>
+            <td>Departamento</td>
             <td>Preço</td>
             <td>Quantidade</td>
-            <td colspan="1">
+            <td colspan="2">
         </tr>
     </thead>
     <tbody>
@@ -22,11 +23,11 @@
             <tr>
                 <td><%= produto.nome %></td>
                 <td><%= produto.descricao %></td>
+                <td><%= produto.departamento.nome %></td>
                 <td><%= produto.preco %></td>
                 <td><%= produto.quantidade %></td>
-                <td><%= button_to "Remover", produto, method: :delete,
-                class:"btn btn-danger",
-                data: {confirm: "Tem certeza que deseja remover #{produto.nome}?"} %></a></td>
+                <td><%= button_to "Remover", produto, method: :delete, class:"btn btn-danger", data: {confirm: "Tem certeza que deseja remover #{produto.nome}?"} %></a></td>
+                <td><%= link_to "Alterar", edit_produto_path(produto), class:"btn btn-default" %></a></td>
             </tr>
         <% end %>
     </tbody>
@@ -39,6 +40,7 @@
         <tr>
             <td>Nome</td>
             <td>Descrição</td>
+            <td>Departamento</td>
             <td>Preço</td>
             <td>Quantidade</td>
             <td colspan="1">
@@ -49,6 +51,7 @@
             <tr>
                 <td><%= produto.nome %></td>
                 <td><%= produto.descricao %></td>
+                <td><%= produto.departamento.nome %></td>
                 <td><%= produto.preco %></td>
                 <td><%= produto.quantidade %></td>
                 <td><%= button_to "Remover", produto, method: :delete, class:"btn btn-danger" %></a></td>
