--- a/app/views/produtos/new.html.erb
+++ b/app/views/produtos/new.html.erb
@@ -24,6 +24,16 @@
             </div>
         </div>
     </div>
+
+    <div class="row">
+        <div class="col-sm-2">
+            <div class="form-group">
+                <%= form.label :departamento %>
+                <%= form.collection_select :departamento_id, @departamentos, :id,:nome, {}, class:"form-control" %>
+            </div>
+        </div>
+    </div>
+
     <div class="row">
         <div class="col-sm-2">
             <div class="form-group">
