--- a/app/views/produtos/index.html.erb
+++ b/app/views/produtos/index.html.erb
@@ -19,17 +19,7 @@
         </tr>
     </thead>
     <tbody>
-        <% @produtos.each do |produto| %>
-            <tr>
-                <td><%= produto.nome %></td>
-                <td><%= produto.descricao %></td>
-                <td><%= produto.departamento.nome %></td>
-                <td><%= produto.preco %></td>
-                <td><%= produto.quantidade %></td>
-                <td><%= button_to "Remover", produto, method: :delete, class:"btn btn-danger", data: {confirm: "Tem certeza que deseja remover #{produto.nome}?"} %></a></td>
-                <td><%= link_to "Alterar", edit_produto_path(produto), class:"btn btn-default" %></a></td>
-            </tr>
-        <% end %>
+        <%= render @produtos %>
     </tbody>
 </table>
 <div class="alert alert-success" role="alert">
@@ -47,15 +37,6 @@
         </tr>
     </thead>
     <tbody>
-        <% @produto_desconto.each do |produto| %>
-            <tr>
-                <td><%= produto.nome %></td>
-                <td><%= produto.descricao %></td>
-                <td><%= produto.departamento.nome %></td>
-                <td><%= produto.preco %></td>
-                <td><%= produto.quantidade %></td>
-                <td><%= button_to "Remover", produto, method: :delete, class:"btn btn-danger" %></a></td>
-            </tr>
-        <% end %>
+        <%= render @produto_desconto %>
     </tbody>
 </table>
