--- a/app/views/departamentos/index.html.erb
+++ b/app/views/departamentos/index.html.erb
@@ -1,5 +1,11 @@
-<p id="notice"><%= notice %></p>
-
+<% if flash[:notice] %>
+    <div class="alert alert-success alert-dismissible">
+        <%= notice %>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+    </button>
+    </div>
+<% end %>
 <h1>Departamentos</h1>
 
 <table class="table table-bordered table-hover">
