feat: validate name at creation

--- a/app/views/departamentos/_form.html.erb
+++ b/app/views/departamentos/_form.html.erb
@@ -13,7 +13,7 @@
     <div class="col-sm-8">
       <div class="form-group">
         <%= f.label :nome %>
-        <%= f.text_field :nome %>
+        <%= f.text_field :nome, class:"form-control" %>
       </div>
     </div>
   </div>
